--- a/reading.html
+++ b/reading.html
@@ -410,6 +410,18 @@ atmosphere.</p>
 paper before and we dive directly in without formal presentation of the
 paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="january" class="section level3">
+<h3>January</h3>
+<div id="thursday-january-12" class="section level4">
+<h4>Thursday January 12</h4>
+<p><a
+href="https://journals.plos.org/plosgenetics/article?id=10.1371/journal.pgen.1010513">Luo
+, et al 2022</a> Domestication and selection footprints in Persian
+walnuts (Juglans regia)</p>
+</div>
+</div>
+<div id="section" class="section level2">
+<h2>2022</h2>
 <div id="november" class="section level3">
 <h3>November</h3>
 <div id="thursday-november-24" class="section level4">
@@ -604,7 +616,7 @@ et al 2022</a> Mutation bias reflects natural selection in Arabidopsis
 thaliana</p>
 </div>
 </div>
-<div id="january" class="section level3">
+<div id="january-1" class="section level3">
 <h3>January</h3>
 <div id="thursday-january-27" class="section level4">
 <h4>Thursday January 27</h4>
@@ -620,7 +632,8 @@ al 2021</a> Genomic analyses provide insights into spinach domestication
 and the genetic basis of agronomic traits</p>
 </div>
 </div>
-<div id="section" class="section level2">
+</div>
+<div id="section-1" class="section level2">
 <h2>2021</h2>
 <div id="december" class="section level3">
 <h3>December</h3>
@@ -853,7 +866,7 @@ Arabidopsis thaliana Reveals Multiple Sources of Introduction from
 Across Eurasia</p>
 </div>
 </div>
-<div id="january-1" class="section level3">
+<div id="january-2" class="section level3">
 <h3>January</h3>
 <div id="thursday-january-28" class="section level4">
 <h4>Thursday January 28</h4>
@@ -876,7 +889,7 @@ gene flow from South America</p>
 </div>
 </div>
 </div>
-<div id="section-1" class="section level2">
+<div id="section-2" class="section level2">
 <h2>2020</h2>
 <div id="december-1" class="section level3">
 <h3>December</h3>
@@ -1107,7 +1120,7 @@ transposable element over-accumulation which provides variants for local
 adaptation</p>
 </div>
 </div>
-<div id="january-2" class="section level3">
+<div id="january-3" class="section level3">
 <h3>January</h3>
 <div id="thursday-january-30" class="section level4">
 <h4>Thursday January 30</h4>
@@ -1118,7 +1131,7 @@ Overdominance Promotes Diversity in Regions of Low Recombination</p>
 </div>
 </div>
 </div>
-<div id="section-2" class="section level2">
+<div id="section-3" class="section level2">
 <h2>2019</h2>
 <div id="december-2" class="section level3">
 <h3>December</h3>
@@ -1391,7 +1404,7 @@ routes to adaptation</p>
 2019</a> Allele frequency dynamics in a pedigreed natural population</p>
 </div>
 </div>
-<div id="january-3" class="section level3">
+<div id="january-4" class="section level3">
 <h3>January</h3>
 <div id="thursday-january-31" class="section level4">
 <h4>Thursday January 31</h4>
@@ -1430,7 +1443,7 @@ legacy of maize in South America</p>
 </div>
 </div>
 </div>
-<div id="section-3" class="section level2">
+<div id="section-4" class="section level2">
 <h2>2018</h2>
 <div id="december-3" class="section level3">
 <h3>December</h3>
