--- a/people.html
+++ b/people.html
@@ -425,8 +425,8 @@ University of Cologne <a href="about.html">read more</a></p>
 and the sources of adaptive alleles. <!-- break --> <br> <br> <br> <br>
 <br> <br> <br></p>
 </div>
-<div id="phd-students" class="section level2">
-<h2>PhD students</h2>
+<div id="phd-candidates" class="section level2">
+<h2>PhD candidates</h2>
 <div style="float: left">
 <p><img src="own_images/people/Corbinian_Graf.JPG" style="width: 100px ;border:10px solid white"></p>
 </div>
@@ -447,6 +447,17 @@ amaranth and how it changed during the repeated domestication.
 <p>José is a PhD student studying gene flow between grain amaranth
 species and their wild relatives to reconstruct the domestication
 history of the crop. <!-- break --> <br> <br> <br> <br> <br> <br>
+<br></p>
+<div style="float: left">
+<p><img src="own_images/people/Julio.jpg" style="width: 100px ;border:10px solid white"></p>
+</div>
+<strong>Julio Martinez</strong>
+<div style="float: left">
+
+</div>
+<p>Julio is a master student working on the molecular validation of
+domestication genes in grain amaranth and the conservation of the MBW
+regulation network. <!-- break --> <br> <br> <br> <br> <br> <br>
 <br></p>
 <div style="float: left">
 <p><img src="own_images/people/kerstin.jpg" style="width: 100px ;border:10px solid white"></p>
@@ -481,6 +492,17 @@ and dissects the regulation of seed color adaptation. <!-- break -->
 <p>Tom is a master student studying the the amaranth transcriptome and
 the involvement of transcriptomic changes in metabolic pathways
 <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<div style="float: left">
+<p><img src="own_images/people/yuna.png" style="width: 100px ;border:10px solid white"></p>
+</div>
+<strong>Yuna Zhang</strong>
+<div style="float: left">
+
+</div>
+<p>Yuna studies polygenic adaptation and the evolution of trait
+syndromes as part of the TRR 341</p>
+<!-- break -->
+<p><br> <br> <br> <br> <br> <br> <br></p>
 </div>
 <div id="lab-manager" class="section level2">
 <h2>Lab manager</h2>
@@ -493,20 +515,6 @@ the involvement of transcriptomic changes in metabolic pathways
 </div>
 <p>Roswitha runs the wet lab and does the pipetting magic <!-- break -->
 <br> <br> <br> <br> <br> <br> <br></p>
-</div>
-<div id="master-students" class="section level2">
-<h2>Master students</h2>
-<div style="float: left">
-<p><img src="own_images/people/Julio.jpg" style="width: 100px ;border:10px solid white"></p>
-</div>
-<strong>Julio Martinez</strong>
-<div style="float: left">
-
-</div>
-<p>Julio is a master student working on the molecular validation of
-domestication genes in grain amaranth and the conservation of the MBW
-regulation network. <!-- break --> <br> <br> <br> <br> <br> <br>
-<br></p>
 <!-- break
 <div style="float: left">
 <img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white">
@@ -524,6 +532,19 @@ regulation network. <!-- break --> <br> <br> <br> <br> <br> <br>
 </div>
 <p>Vivien studies genetic determinants of germination in grain amaranth.
 <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+</div>
+<div id="visitors" class="section level2">
+<h2>Visitors</h2>
+<div style="float: left">
+<p><img src="own_images/people/roger_sulub.jpg" style="width: 100px ;border:10px solid white"></p>
+</div>
+<strong>Roger Antonio Sulub Tun </strong>
+<div style="float: left">
+
+</div>
+<p>Roger is a visiting PhD student from CICY in Mexico and studies the
+center of origin of <em>A. cruentus</em> <!-- break --> <br> <br> <br>
+<br> <br> <br> <br></p>
 </div>
 <div id="student-helpers-and-interns" class="section level2">
 <h2>Student helpers and interns</h2>
