--- a/reading.html
+++ b/reading.html
@@ -410,6 +410,23 @@ atmosphere.</p>
 paper before and we dive directly in without formal presentation of the
 paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="febraury" class="section level3">
+<h3>Febraury</h3>
+<div id="thursday-febraury-9" class="section level4">
+<h4>Thursday Febraury 9</h4>
+<p><a
+href="https://www.nature.com/articles/s41467-022-34416-0">Quagliariello
+et al., 2023</a> Ancient oral microbiomes support gradual Neolithic
+dietary shifts towards agriculture</p>
+</div>
+<div id="thursday-febraury-2" class="section level4">
+<h4>Thursday Febraury 2</h4>
+<p><a
+href="https://www.biorxiv.org/content/10.1101/2021.08.26.457771v5.full">Shang
+et al., preprint</a> Drivers of genomic landscapes of differentiation
+across Populus divergence gradient</p>
+</div>
+</div>
 <div id="january" class="section level3">
 <h3>January</h3>
 <div id="thursday-january-26" class="section level4">
